User Register and Token Validation(JWT)

--- a/PersonalBlog.API/appsettings.json
+++ b/PersonalBlog.API/appsettings.json
@@ -2,6 +2,12 @@
   "ConnectionStrings":{
     "DefaultConnection" : "Data Source=SPABlogDB.db"
   },
+
+  "AppSettings": {
+    "Token": "This is my shared key, not so secret, secret!",
+    "Issuer": "http://localhost/",
+    "Audience": "Any"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
